fix: adjust calendar positioning on smaller screens

--- a/src/components/DatePicker/Calendar/calendar.css
+++ b/src/components/DatePicker/Calendar/calendar.css
@@ -25,7 +25,7 @@
   display: flex;
   top: 44px;
   left: 0;
-  max-width: 300px;
+  width: 300px;
   background-color: #fff;
   border-radius: var(--border-radius);
   padding: 1rem;
