--- a/src/components/DatePicker/datepicker.css
+++ b/src/components/DatePicker/datepicker.css
@@ -30,3 +30,9 @@
   width: 20px;
   height: 20px;
 }
+
+.inputContainer {
+  position: relative;
+  display: block;
+  height: 100%;
+}
